--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,18 +6,17 @@
             <i class="bi bi-house-fill"></i> </a>
             <p>
   <span style="color: rgb(163, 163, 163);">{{ month_name|capfirst }}:</span>
-  <span style="color: {% if saldo_total >= 0 %}green{% else %}red{% endif %};">
-    R$ {{ saldo_total|floatformat:2 }}
+  <span style="color: {% if saldo_total_nav >= 0 %}green{% else %}red{% endif %};">
+    R$ {{ saldo_total_nav|floatformat:2 }}
   </span>
 <br>
   <span style="color: rgb(163, 163, 163);">{{ mes_proximo_nome|capfirst }}:</span>
-  <span style="color: {% if saldo_total_prox >= 0 %}green{% else %}red{% endif %};">
-    R$ {{ saldo_total_prox|floatformat:2 }}
+  <span style="color: {% if saldo_total_prox_nav >= 0 %}green{% else %}red{% endif %};">
+    R$ {{ saldo_total_prox_nav|floatformat:2 }}
   </span>
 </p>
 
-
-            
+           
             {% endif %}
         <!-- Botão Toggler para Offcanvas -->
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
