--- a/templates/cal/tipo_list.html
+++ b/templates/cal/tipo_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mt-4">
     <h2>Tipos de Transação</h2>
-    <a href="{% url 'cal:tipo_create' %}" class="btn btn-primary mb-3">Novo Tipo</a>
+    <a href="{% url 'cal:tipo_create' %}" class="btn btn-primary mb-3"><i class="bi bi-plus-circle"></i> Novo Tipo</a>
     <table class="table table-bordered">
         <thead>
             <tr>
