--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -61,6 +61,10 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cal:categorias' %}"><i class="bi bi-grid-1x2"></i></i> Categoria</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'cal:listar_usuarios' %}"><i class="bi bi-person-gear"></i> Usuários</a>
                     </li>
                     {% endif %}
