--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -68,6 +68,10 @@
                         <a class="nav-link" href="{% url 'cal:listar_usuarios' %}"><i class="bi bi-person-gear"></i> Usuários</a>
                     </li>
                     {% endif %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cal:contato' %}"><i class="bi bi-person-vcard"></i> Contato</a>
+                    </li>
                     
                 </ul>
 
