--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,17 @@
   </div>
 </div>
 
- 
+<footer class="wrapper style1 text-center py-4">
+  <div class="inner">
+    <a href="https://ribdev.netlify.app/" target="_blank">
+      <img src="{% static 'img/rib.png' %}" 
+           class="img-thumbnail mx-auto d-block" 
+           alt="RIBDEV" 
+           width="100">
+    </a>
+  </div>
+</footer>
+
  
 {% endblock %}
 
