--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -46,6 +46,10 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cal:metas_categoria' %}"><i class="bi bi-graph-up-arrow"></i> Metas mensais</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'cal:resumo_categoria' %}"><i class="bi bi-pie-chart-fill"></i> Balanço geral</a>
                     </li>
 
