--- a/templates/cal/calendar.html
+++ b/templates/cal/calendar.html
@@ -4,29 +4,22 @@
 {% block title %}Carteira{% endblock %}
 
 {% block content %}
-<div class="calendar-container">
-    
-    <div class="calendar-navigation">
-        <a class="btn btn-primary" href="{% url 'cal:calendar' %}?{{ prev_month }}">
-            <i class="bi bi-arrow-left"></i></i> Mês Anterior
+<div class="container my-4">
+
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <a class="btn btn-outline-primary" href="{% url 'cal:calendar' %}?{{ prev_month }}">
+            <i class="bi bi-arrow-left"></i> Mês Anterior
         </a>
-        <!-- <h2 class="calendar-title">{{ month_name|title }} {{ year }}</h2> -->
-        <a class="btn btn-primary" href="{% url 'cal:calendar' %}?{{ next_month }}">
+        <h3 class="text-center">{{ month_name|title }} {{ year }}</h3>
+        <a class="btn btn-outline-primary" href="{% url 'cal:calendar' %}?{{ next_month }}">
             Próximo Mês <i class="bi bi-arrow-right"></i>
         </a>
     </div>
 
     <div class="table-responsive">
-        {{ calendar }}
+        {{ calendar|safe }}
     </div>
+
 </div>
-<!-- Botão Flutuante "Adicionar Transação" -->
-
-<!-- <a href="{% url 'cal:transacao_nova' %}" class="btn btn-primary rounded-circle shadow-lg"
-   style="position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px;
-          display: flex; align-items: center; justify-content: center; font-size: 28px; z-index: 1000;">
-  <i class="bi bi-plus-lg"></i>
-</a> -->
-
 
 {% endblock %}
