--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% load static %}
 <!-- cal/templates/registration/logged_out.html -->
 <!DOCTYPE html>
@@ -6,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logout</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
 </head>
 <body>
     <div class="logout-container">
