--- a/templates/cal/metas_dashboard.html
+++ b/templates/cal/metas_dashboard.html
@@ -5,6 +5,8 @@
 {% block content %}
 <div class="container my-4">
   <h2 class="mb-4">Metas do mês: {{ mes_atual }}</h2>
+  <h2 class="mb-4">Metas do mês: {{ mes_atual }}</h2>
+
   <!-- Navegação de meses -->
 <div class="d-flex justify-content-between flex-wrap mb-3 gap-2">
   <a href="?mes={{ mes_anterior.month }}&ano={{ mes_anterior.year }}" class="btn btn-outline-primary">
