--- a/static/css/calendar.css
+++ b/static/css/calendar.css
@@ -187,3 +187,14 @@ body.dark-mode h6 {
   transition: all 0.3s ease-in-out;
 }
 
+/* style.css */
+.btn-fab {
+  width: 56px;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  padding: 0;
+  border-radius: 50%;
+}
