--- a/templates/base.html
+++ b/templates/base.html
@@ -60,33 +60,48 @@
     
     {% endblock %}
     {% if user.is_authenticated %}
-    <!-- Botões Flutuantes -->
-<!-- Botões Flutuantes -->
+   <!-- Botões Flutuantes -->
 <div id="fab-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1050;">
   <!-- Botão principal -->
-  <button id="fab-main" class="btn btn-primary rounded-circle shadow" title="Menu" style="width: 56px; height: 56px; display: flex; justify-content: center; align-items: center;">
-    <i class="bi bi-plus-lg fs-4""></i>
+  <button id="fab-main" class="btn btn-primary shadow btn-fab" title="Menu">
+    <i class="bi bi-plus-lg"></i>
   </button>
 
   <!-- Botões secundários -->
   <div id="fab-actions" class="d-none flex-column align-items-end mt-2">
-    <a href="{% url 'cal:transacao_nova' %}" class="btn btn-primary rounded-circle shadow mb-2" title="Adicionar Transação" style="width: 56px; height: 56px; display: flex; justify-content: center; align-items: center;">
-      <i class="bi bi-currency-dollar"></i>
-    </a>
 
-    <a href="{% url 'cal:transacoes_mes' %}" class="btn btn-success rounded-circle shadow mb-2" title="Mês" style="width: 56px; height: 56px; display: flex; justify-content: center; align-items: center;">
-      <i class="bi bi-graph-up-arrow"></i>
-    </a>
-
-    <a href="{% url 'cal:calendar' %}" class="btn btn-info rounded-circle shadow mb-2" title="Calendário" style="width: 56px; height: 56px; display: flex; justify-content: center; align-items: center;">
-      <i class="bi bi-calendar-event fs-4"></i>
-    </a>
-
-    <button class="btn btn-dark rounded-circle shadow mb-2" title="Modo Escuro" onclick="toggleDarkMode()" style="width: 56px; height: 56px; display: flex; justify-content: center; align-items: center;">
-      <i class="bi bi-moon-stars fs-4"></i>
+    <!-- Modo escuro -->
+    <button class="btn btn-dark shadow btn-fab mb-4" title="Modo Escuro" onclick="toggleDarkMode()">
+      <i class="bi bi-moon-stars"></i>
     </button>
+
+    
+    
+
+    <!-- Calendário -->
+    <a href="{% url 'cal:calendar' %}" class="btn btn-info shadow btn-fab mb-2" title="Calendário">
+      <i class="bi bi-calendar-event"></i>
+    </a>
+
+    <!-- Balanço mensal -->
+    <a href="{% url 'cal:transacoes_mes' %}" class="btn btn-success shadow btn-fab mb-2" title="Mês">
+      <i class="bi bi-bar-chart-line"></i>
+    </a>
+
+    <!-- Metas -->
+    <a href="{% url 'cal:metas_categoria' %}" class="btn btn-warning shadow btn-fab mb-2" title="Metas">
+      <i class="bi bi-bullseye"></i>
+    </a>
+
+    <!-- Nova transação -->
+    <a href="{% url 'cal:transacao_nova' %}" class="btn btn-primary shadow btn-fab mb-2" title="Adicionar Transação">
+      <i class="bi bi-plus-circle"></i>
+    </a>
+
+
   </div>
 </div>
+
 
 {% endif %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
