--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,25 +33,33 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav me-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cal:calendar' %}"><i class="bi bi-calendar-event"></i> Calendário</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cal:transacao_nova' %}"><i class="bi bi-currency-dollar"></i> Registrar movimentação</a>
-                    </li>
-                    
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cal:transacoes_mes' %}"><i class="bi bi-graph-up-arrow"></i> Balanço mensal</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cal:metas_categoria' %}"><i class="bi bi-graph-up-arrow"></i> Metas mensais</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cal:resumo_categoria' %}"><i class="bi bi-pie-chart-fill"></i> Balanço geral</a>
-                    </li>
+                    <!-- Navbar -->
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'cal:calendar' %}">
+      <i class="bi bi-calendar-event"></i> Calendário
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'cal:transacao_nova' %}">
+      <i class="bi bi-plus-circle"></i> Registrar movimentação
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'cal:transacoes_mes' %}">
+      <i class="bi bi-bar-chart-line"></i> Balanço mensal
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'cal:metas_categoria' %}">
+      <i class="bi bi-bullseye"></i> Metas mensais
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'cal:resumo_categoria' %}">
+      <i class="bi bi-pie-chart-fill"></i> Balanço geral
+    </a>
+  </li>
+  
 
                     
 
