--- a/static/css/calendar.css
+++ b/static/css/calendar.css
@@ -198,3 +198,11 @@ body.dark-mode h6 {
   padding: 0;
   border-radius: 50%;
 }
+
+
+.chart-container {
+  position: relative;
+  margin: auto;
+  height: 250px;
+  width: 250px;
+}
