--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="shortcut icon" href="{% static 'img/logo.jpg' %}" type="image/png">
 
-    <!-- CSS -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+
 
     
     <!-- Bootstrap Icons -->
@@ -23,7 +24,7 @@
 
     <link href="{% static 'css/simple-sidebar.css' %}" rel="stylesheet">
     <link href="{% static 'css/fontawesome.min.css' %}" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'img/dever.png' %}" type="image/png">
+    
     <link rel="stylesheet" type="text/css" href="{% static 'css/calendar.css' %}">
 
     <title>{% block title %}{% endblock %} | SGC</title>
