--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -73,7 +73,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cal:categorias' %}"><i class="bi bi-grid-1x2"></i></i> Categoria</a>
+                        <a class="nav-link" href="{% url 'cal:categorias' %}"><i class="bi bi-grid-1x2"></i> Categoria</a>
                     </li>
 
                     <li class="nav-item">
