--- a/templates/cal/transacoes_mes.html
+++ b/templates/cal/transacoes_mes.html
@@ -97,9 +97,9 @@
       {% endfor %}
     </tbody>
     <tfoot>
-      <tr class="table-secondary">
-        <td colspan="2"><strong>Total:</strong></td>
-        <td colspan="2">
+      <tr class="table-info">
+        <td colspan="3"><strong>Total:</strong></td>
+        <td colspan="3">
           <strong>R$ {{ saldo_total|floatformat:2 }}</strong>
         </td>
       </tr>
