--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,10 @@
   <section class="text-center mb-4">
     <h2>Bem-vindo à sua <strong>Carteira Digital</strong></h2>
     <p class="lead">Gerencie seus gastos de forma simples, visual e segura.</p>
+    <img src="{% static 'img/logo.png' %}" 
+           
+         
+           width="150">
   </section>
 
   <ul class="list-group mb-4">
