--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="shortcut icon" href="{% static 'img/logo.jpg' %}" type="image/png">
+<link rel="shortcut icon" href="{% static 'img/logo.png' %}" type="image/png">
 
 
 
@@ -138,7 +138,22 @@
 </script>
 
 
-
+<!-- Adicione no final do template, antes de </body> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
+<script>
+$(document).ready(function(){
+  $('#id_limite').inputmask('decimal', {
+    'alias': 'numeric',
+    'groupSeparator': '.',
+    'autoGroup': true,
+    'digits': 2,
+    'digitsOptional': false,
+    'placeholder': '0',
+    'radixPoint': ',',
+    'rightAlign': false
+  });
+});
+</script>
 
 </body>
 </html>
