--- a/templates/cal/confirmar_exclusao_meta.html
+++ b/templates/cal/confirmar_exclusao_meta.html
@@ -7,7 +7,7 @@
 
   <form method="post">
     {% csrf_token %}
-    <a href="{% url 'cal:metas_dashboard' %}?mes={{ meta.mes }}&ano={{ meta.ano }}" class="btn btn-secondary">Cancelar</a>
+    <a href="{% url 'cal:metas_dashboard' %}?mes={{ meta.mes }}&ano={{ meta.ano }}" class="btn btn-secondary"><i class="bi bi-x-circle"></i> Cancelar</a>
 
 
     <button type="submit" class="btn btn-danger">Confirmar Exclusão</button>
