--- a/templates/cal/meta_confirm_delete.html
+++ b/templates/cal/meta_confirm_delete.html
@@ -7,7 +7,7 @@
   <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Sim, excluir</button>
-    <a href="{% url 'cal:metas_categoria' %}?mes={{ meta.mes }}&ano={{ meta.ano }}" class="btn btn-secondary">Cancelar</a>
+    <a href="{% url 'cal:metas_categoria' %}?mes={{ meta.mes }}&ano={{ meta.ano }}" class="btn btn-secondary"><i class="bi bi-x-circle"></i> Cancelar</a>
   </form>
 </div>
 {% endblock %}
