--- a/templates/cal/meta_form.html
+++ b/templates/cal/meta_form.html
@@ -44,13 +44,14 @@
             </div>
         
         <div class="mt-4">
-            <button type="submit" class="btn btn-primary me-2">
-                <i class="bi bi-check-circle"></i> Salvar
-            </button>
+            
             <a href="{% url 'cal:metas_categoria' %}?mes={{ mes|default:'' }}&ano={{ ano|default:'' }}" 
-               class="btn btn-outline-secondary">
+               class="btn btn-danger">
                 <i class="bi bi-x-circle"></i> Cancelar
             </a>
+            <button type="submit" class="btn btn-primary">
+                <i class="bi bi-check-circle"></i> Salvar
+            </button>
         </div>
     </form>
 </div>
