--- a/templates/cal/transacao_editar.html
+++ b/templates/cal/transacao_editar.html
@@ -45,14 +45,15 @@
       {% endfor %}
     </div>
 
-    <div class="d-flex justify-content-between mt-4">
+    
+      <a href="javascript:history.back()" class="btn btn-danger">
+        <i class="bi bi-x-circle"></i> Cancelar
+      </a>
       <button type="submit" class="btn btn-primary">
         <i class="bi bi-check-circle"></i> Salvar
       </button>
-      <a href="javascript:history.back()" class="btn btn-outline-secondary">
-        <i class="bi bi-x-circle"></i> Cancelar
-      </a>
-    </div>
+      
+   
   </form>
 </div>
 
