--- a/templates/cal/transacao_form.html
+++ b/templates/cal/transacao_form.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     
-    <a href="{% url 'cal:calendar' %}" class="btn btn-danger">Cancelar</a>
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <a href="{% url 'cal:calendar' %}" class="btn btn-danger"><i class="bi bi-x-circle"></i> Cancelar</a>
+    <button type="submit" class="btn btn-primary"><i class="bi bi-check-circle"></i> Salvar</button>
   </form>
 {% endblock %}
