--- a/templates/usuarios/form_usuario.html
+++ b/templates/usuarios/form_usuario.html
@@ -16,8 +16,8 @@
                 </div>
             {% endfor %}
             <div class="text-center mt-3">
-                <button type="submit" class="btn btn-success rounded-3">Salvar</button>
-                <a href="{% url 'cal:listar_usuarios' %}" class="btn btn-danger rounded-3">Cancelar</a>
+                <button type="submit" class="btn btn-success rounded-3"><i class="bi bi-check-circle"></i> Salvar</button>
+                <a href="{% url 'cal:listar_usuarios' %}" class="btn btn-danger rounded-3"><i class="bi bi-x-circle"></i> Cancelar</a>
             </div>
         </form>
         
