--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="{% static 'css/dark-mode.css' %}" rel="stylesheet">
+
 <!-- Bootstrap Icons -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
 <link rel="shortcut icon" href="{% static 'img/logo.png' %}" type="image/png">
 
 
@@ -47,14 +47,7 @@
 
         {% block content %}{% endblock %}
     </main>
-
-    
-
-    <!-- Scripts -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
- 
-   
+  
     {% block scripts %}
     
    
